# thirdparty-assimp

./: CMakeLists.txt  LICENSE  README.md  cgmanifest.json  init.cmake  revision.h
code/Common/: StandardShapes.cpp
contrib/zlib/: gzguts.h
include/assimp/: config.h  revision.h
lib/: assimp-vc143-mt.exp  assimp-vc143-mt.lib  draco.exp  draco.lib
